More names alineation

--- a/custom_components/accurate_solar_forecast/manifest.json
+++ b/custom_components/accurate_solar_forecast/manifest.json
@@ -1,6 +1,6 @@
 {
     "domain": "accurate_forecast",
-    "name": "Accurate Forecast",
+    "name": "Accurate Solar Forecast",
     "codeowners": [
         "@Carlosjcfr"
     ],
